# kindly-guard

./: .cargo-machete.toml  .cliff.toml  .codecov.yml  .dockerignore  .env.example  .gitignore  .gitmessage  .hadolint.yaml  .pre-commit-config.yaml  ANNOUNCEMENT.md  API_SURFACE_MAP.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  AUDIT_LOGGER_IMPLEMENTATION.md  BENCHMARKS.md  BUILD_INSTRUCTIONS.md  BUILD_PLATFORMS.md  BUILD_PROCESS.md  CHANGELOG.md  CICD_MIGRATION_GUIDE.md  CI_COVERAGE_GUIDE.md  CLAUDE.md  CLAUDE_CODE_IMPLEMENTATION_PLAN.md  CLAUDE_CODE_INTEGRATION.md  CLAUDE_CODE_INTEGRATION_SUMMARY.md  CLAUDE_INTEGRATION_TEST.md  CLAUDE_SETUP.md  CLAUDE_USER_GUIDE.md  CLIENT_SECURITY_DOCS.md  CODE_OF_CONDUCT.md  CODE_STRUCTURE_MAP.md  COMPREHENSIVE_TEST_FIX_SUMMARY.md  CONTRIBUTING.md  COVERAGE_CI_IMPROVEMENTS.md  CROSS_COMPILATION_SETUP.md  Cargo.toml  Cross.toml  DEPENDENCY_ANALYSIS.md  DEPLOYMENT_GUIDE.md  DEVELOPMENT_PLAN.md  (+182 more)
crates-io-package/kindlyguard/: .gitignore  Cargo.toml  README.md  auto-publish.sh  publish.sh
crates-io-package/kindlyguard/src/: lib.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_auth_token.rs  fuzz_event_buffer.rs  fuzz_injection_detector.rs  fuzz_json_scanner.rs  fuzz_mcp_protocol.rs  fuzz_permission_check.rs  fuzz_unicode_scanner.rs
kindly-guard-cli/: Cargo.toml  README.md
kindly-guard-cli/src/: main.rs  output.rs
kindly-guard-cli/src/commands/: install.rs  mod.rs
kindly-guard-cli/tests/: README_WRAPPER_TESTS.md  cli_wrapper_security_tests.rs  simple_wrapper_test.rs
kindly-guard-cli/wix/: main.wxs
kindly-guard-client/: Cargo.toml  README.md
kindly-guard-client/examples/: basic_client.rs  security_test.rs  stress_test.rs
kindly-guard-client/src/: client.rs  lib.rs  metrics.rs  security_tester.rs  traits.rs
kindly-guard-client/src/transport/: mod.rs  stdio.rs
kindly-guard-core/: Cargo.toml  ENHANCED_FEATURES.md  README.md
kindly-guard-core/examples/: claude_integration_demo.rs  lightning_shield_demo.rs  shield_visualization.rs  terminal_animation.rs  test_encapsulation.rs
kindly-guard-core/src/: atomic_event_buffer.rs  binary_protocol.rs  lib.rs  pattern_matcher.rs
kindly-guard-core/src/premium/: mod.rs
kindly-guard-core/tests/: claude_integration_tests.rs
kindly-guard-server/: API_DOCUMENTATION.md  Cargo.toml  README.md  SECURITY_ERROR_HANDLING.md  TEST_RESULTS_SUMMARY.md
kindly-guard-server/assets/: README.md
kindly-guard-server/assets/animations/: shield-pulse.css
kindly-guard-server/assets/css/: threat-visualization.css  widget.css
kindly-guard-server/assets/icons/: convert-icons.sh
kindly-guard-server/assets/js/: widget.js
kindly-guard-server/assets/shaders/: shield-glow.glsl  shield-glow.wgsl
kindly-guard-server/assets/templates/: claude-widget.html  threat-visualization.html
kindly-guard-server/benches/: BENCHMARK_GUIDE.md  README.md  cli_bench.rs  comparative_benchmarks.rs  comprehensive_benchmarks.rs  critical_path_benchmarks.rs  display_bench.rs  memory_profile_bench.rs  mode_comparison.rs  neutralization.rs  performance_comparison.rs  rate_limiter_comparison.rs  real_world.rs  regression_benchmarks.rs  scanner_benchmarks.rs  simple_benchmark.rs
kindly-guard-server/docs/: neutralizer-integration-guide.md
kindly-guard-server/examples/: config_writer_demo.rs  detect_mcp.rs  detect_mcp_fixed.rs  metrics_demo.rs  neutralizer_tracing.rs  performance_comparison.rs  performance_demo.rs  performance_test.rs  realistic_performance_test.rs  simple_perf_test.rs
kindly-guard-server/scripts/: run-performance-tests.sh  shell-init.bash  shell-init.fish  shell-init.zsh
kindly-guard-server/src/: auth.rs  component_selector.rs  config.rs  daemon.rs  enhanced_impl.rs  error.rs  event_processor.rs  lib.rs  logging.rs  main.rs  metrics.rs  metrics.rs.old  protocol.rs  rate_limit.rs  server.rs  signing.rs  standard_impl.rs  traits.rs  versioning.rs
kindly-guard-server/src/audit/: enhanced.rs  file.rs  memory.rs  mod.rs  neutralization.rs
kindly-guard-server/src/cli/: commands.rs  mod.rs  validation.rs
kindly-guard-server/src/config/: SECURITY_CONFIG_GUIDE.md  reload.rs
kindly-guard-server/templates/: dashboard.html
kindly-guard-server/test-data/: README.md
kindly-guard-server/test_data/: api_data.json  clean.txt  large_mixed.txt  unicode_threats.txt  webpage.html
kindly-guard-server/tests/: LOAD_TESTING_GUIDE.md  PERFORMANCE_TESTING.md  ai_service_integration_tests.rs  basic_integration_test.rs  behavioral_equivalence.rs  chaos_engineering.rs  chaos_engineering_tests.rs  e2e_tests.rs  enhanced_prompt_injection_tests.rs  event_buffer_behavioral_equivalence.rs  factory_functions_test.rs  integration_scenarios.rs  integration_test.rs  load_testing.rs  mcp_advanced_tests.rs  mcp_auth_tests.rs  mcp_error_tests.rs  mcp_protocol_tests.rs  mock_auth_tests.rs  mock_auth_tests.rs.disabled  mock_tests.rs  mock_tests.rs.disabled  multi_protocol_security_tests.rs  multi_protocol_security_tests_standalone.rs  owasp_asvs_compliance_tests.rs  performance_regression.rs  property_tests.rs  security_integration_test.rs  security_properties.rs  security_test_runner.rs  security_tests.rs  test_neutralization_debug.rs  test_xss_detection.rs  trait_compliance.rs  unicode_tag_injection_tests.rs  universal_display_tests.rs
kindly-guard-server/wix/: main.wxs
kindly-guard-shield/src-tauri/: BINARY_PROTOCOL.md  Cargo.toml  build.rs  check-security-boundaries.sh  tauri.conf.json
kindly-tools/: Cargo.toml  MCP_COMMANDS.md  MCP_IMPLEMENTATION_SUMMARY.md
kindly-tools/examples/: test_env_detection.rs
kindly-tools/src/: lib.rs  main.rs  platform.rs
kindly-tools/templates/: mcp-config.toml
kindly-tools/wix/: main.wxs
xtask/: Cargo.toml  FLAKY_TEST_MANAGEMENT.md  README.md  RELEASE_CHECKLIST.md  VALIDATE_DIST_USAGE.md  test_interactive.sh
xtask/examples/: archive_demo.rs  flaky_test_example.rs  test_archive.rs  tool_install_example.rs  usage.md
xtask/src/: config.rs  errors.rs  interactive.rs  lib.rs  main.rs  utils.rs
xtask/tests/: flaky_test_integration.rs  tools_test.rs
xtask/wix/: main.wxs
(+500 files in other folders)
