[workspace]
resolver = "2"
members = [
    "kindly-guard-server",
    "kindly-guard-cli",
    "kindly-guard-shield",
    "crates-io-package/kindlyguard",
]
exclude = [
    "target",
    "npm-package",
    "demo",
    "claude-ai-kindlyguard",
    "claude-code-kindlyguard",
]

[workspace.package]
version = "0.9.5"
edition = "2021"
authors = ["samduchaine"]
license = "Apache-2.0"
repository = "https://github.com/samduchaine/kindly-guard"
homepage = "https://github.com/samduchaine/kindly-guard"
documentation = "https://docs.rs/kindly-guard"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Security
unicode-security = "0.1"
regex = "1.11"
sha2 = "0.10"
base64 = "0.22"
hmac = "0.12"
ed25519-dalek = "2.1"
rand = "0.8"

# Logging and errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1.0"
thiserror = "2.0"

# UI
crossterm = "0.28"
ratatui = "0.29"

# Testing
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.secure]
inherits = "release"
overflow-checks = true
debug-assertions = true

[profile.bench]
inherits = "release"
debug = true