[package]
name = "kindly-guard-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
kindly-guard-server = { path = "../kindly-guard-server" }
arbitrary = { version = "1.3", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "fuzz_unicode_scanner"
path = "fuzz_targets/fuzz_unicode_scanner.rs"
test = false
doc = false

[[bin]]
name = "fuzz_injection_detector"
path = "fuzz_targets/fuzz_injection_detector.rs"
test = false
doc = false

[[bin]]
name = "fuzz_json_scanner"
path = "fuzz_targets/fuzz_json_scanner.rs"
test = false
doc = false

[[bin]]
name = "fuzz_mcp_protocol"
path = "fuzz_targets/fuzz_mcp_protocol.rs"
test = false
doc = false

[[bin]]
name = "fuzz_auth_token"
path = "fuzz_targets/fuzz_auth_token.rs"
test = false
doc = false

[[bin]]
name = "fuzz_permission_check"
path = "fuzz_targets/fuzz_permission_check.rs"
test = false
doc = false