[package]
name = "kindly-guard-cli"
version = "0.10.2"
edition = "2021"
license = "Apache-2.0"
description = "Command-line interface for KindlyGuard security scanning"
authors = ["Kindly Software Inc <support@kindlysoftware.com>"]
keywords = ["security", "unicode", "scanner", "cli"]
categories = ["command-line-utilities", "security"]

[package.metadata.dist]
dist = false

[package.metadata.wix]
upgrade-guid = "53F070D6-7932-4895-A3A3-B3F059853DF8"
path-guid = "2E03DCA5-3E79-437D-9DEE-4758BFF9C6D9"
license = false
eula = false

[[bin]]
name = "kindlyguard"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
indicatif = "0.17"
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"
comfy-table = "7.1"
kindly-guard-server = { path = "../kindly-guard-server", version = "0.10.2" }

# Dependencies for install command
reqwest = { version = "0.12", features = ["stream"] }
sha2 = "0.10"
futures-util = "0.3"
flate2 = "1.0"
tar = "0.4"
zip = "2.2"
