[package]
name = "kindly-guard-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.kindlyguard.dev/client"
readme = "README.md"
keywords = ["security", "mcp", "client", "async", "threat-detection"]
categories = ["api-bindings", "asynchronous", "network-programming"]
description = "Rust client library for KindlyGuard MCP security server"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3.0"
criterion = "0.5"

[[example]]
name = "basic_client"
path = "examples/basic_client.rs"

[[example]]
name = "security_test"
path = "examples/security_test.rs"

[[example]]
name = "stress_test"
path = "examples/stress_test.rs"