[package]
name = "kindly-guard-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "KindlyGuard MCP Security Server - Protecting your AI interactions"

[lib]
name = "kindly_guard_server"
path = "src/lib.rs"

[[bin]]
name = "kindly-guard"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-security.workspace = true
regex.workspace = true
sha2.workspace = true
base64.workspace = true
hmac.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
crossterm.workspace = true
ratatui.workspace = true

# MCP Protocol
jsonrpc-core = "18.0"
jsonrpc-stdio-server = "18.0"

# Configuration
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Additional dependencies
once_cell = "1.20"
parking_lot = "0.12"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Private core dependency
kindly-guard-core = { path = "../kindly-guard-core" }

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile = "3.14"
arbitrary = { version = "1.3", features = ["derive"] }