[package]
name = "kindly-guard-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["security", "mcp", "ai-security", "threat-detection", "unicode"]
categories = ["command-line-utilities", "network-programming"]
description = "Security-focused MCP server protecting AI model interactions from threats"

[lib]
name = "kindly_guard_server"
path = "src/lib.rs"

[[bin]]
name = "kindly-guard"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-security.workspace = true
regex.workspace = true
sha2.workspace = true
base64.workspace = true
hmac.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
crossterm.workspace = true
ratatui.workspace = true

# MCP Protocol
jsonrpc-core = "18.0"
jsonrpc-stdio-server = "18.0"

# Configuration
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Additional dependencies
once_cell = "1.20"
parking_lot = "0.12"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
csv = "1.3"
notify = "8.0"
axum = { version = "0.7", features = ["tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Enhanced features dependency (optional)
# Private dependencies configured separately

# Testing support
mockall = { version = "0.13", optional = true }

[features]
default = []
enhanced = []  # Enhanced features configured separately
test-utils = ["mockall"]

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile = "3.14"
arbitrary = { version = "1.3", features = ["derive"] }
jemallocator = "0.5"
jemalloc-ctl = "0.5"
tokio-test = "0.4"
mockall = { version = "0.13", features = [] }
pretty_assertions = "1.4"
serial_test = "3.2"

[[bench]]
name = "simple_benchmark"
harness = false

[[bench]]
name = "regression_benchmarks"
harness = false

[[bench]]
name = "critical_path_benchmarks"
harness = false

[[bench]]
name = "memory_profile_bench"
harness = false