[package]
name = "kindly-guard-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords = ["security", "mcp", "ai-security", "threat-detection", "unicode"]
categories = ["command-line-utilities", "network-programming"]
description = "Security-focused MCP server protecting AI model interactions from threats"

[lib]
name = "kindly_guard_server"
path = "src/lib.rs"

[[bin]]
name = "kindly-guard"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
unicode-security.workspace = true
regex.workspace = true
sha2.workspace = true
base64.workspace = true
hmac.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
thiserror.workspace = true
crossterm.workspace = true
ratatui.workspace = true

# MCP Protocol
jsonrpc-core = "18.0"
jsonrpc-stdio-server = "18.0"

# Configuration
toml = "0.8"

# CLI
clap = { version = "4.5", features = ["derive"] }

# Additional dependencies
once_cell = "1.20"
parking_lot = "0.12"
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
crossbeam-deque = "0.8"
num_cpus = "1.16"
csv = "1.3"
notify = "8.0"
axum = { version = "0.7", features = ["tokio", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = { version = "0.24", optional = true }
hyper = { version = "1.5", features = ["full"], optional = true }
hyper-util = { version = "0.1", optional = true }
subtle = "2.6"

# Testing support
mockall = { version = "0.13", optional = true }

[features]
default = []
enhanced = []
test-utils = ["mockall"]
websocket = ["dep:tokio-tungstenite", "dep:hyper", "dep:hyper-util"]

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
tempfile = "3.14"
arbitrary = { version = "1.3", features = ["derive"] }
jemallocator = "0.5"
jemalloc-ctl = "0.5"
tokio-test = "0.4"
mockall = { version = "0.13", features = [] }
pretty_assertions = "1.4"
serial_test = "3.2"
termcolor = "1.4"
jsonwebtoken = "9.3"
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = "0.24"
hyper = { version = "1.5", features = ["full"] }
hyper-util = "0.1"
futures-util = "0.3"
futures = "0.3"

[[bench]]
name = "simple_benchmark"
harness = false

[[bench]]
name = "regression_benchmarks"
harness = false

[[bench]]
name = "critical_path_benchmarks"
harness = false

[[bench]]
name = "memory_profile_bench"
harness = false

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[[bench]]
name = "rate_limiter_comparison"
harness = false

[[bench]]
name = "scanner_benchmarks"
harness = false

[[bench]]
name = "real_world"
harness = false

[[test]]
name = "dependency_tests"
path = "tests/integration/dependency_tests.rs"

[[test]]
name = "mcp_protocol_test"
path = "tests/integration/mcp_protocol_test.rs"

[[test]]
name = "cli_tests"
path = "tests/integration/cli_tests.rs"

[[test]]
name = "threat_detection_scenarios"
path = "tests/integration/threat_detection_scenarios.rs"

[[test]]
name = "basic_functionality_test"
path = "tests/integration/basic_functionality_test_fixed.rs"