[package]
name = "kindly-tools"
version = "0.10.2"
edition = "2021"
authors = ["samduchaine"]
license = "Apache-2.0"
repository = "https://github.com/samduchaine/kindly-guard"
description = "Development tools and utilities for KindlyGuard ecosystem"

[package.metadata.dist]
dist = true

[package.metadata.wix]
upgrade-guid = "B74D2B57-5FF7-4E2B-9DC5-652840E9A425"
path-guid = "D109016B-4CDB-4C59-99D5-7035073E1576"
license = false
eula = false

[[bin]]
name = "kindly-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
tokio = { version = "1.42", features = ["full"] }
# reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }  # TODO: Fix MSRV compatibility
serde_json = "1.0"
which = "7.0"
directories = "5.0"
indicatif = "0.17"
dialoguer = "0.11"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# futures-util = "0.3"  # TODO: Add back when reqwest is re-enabled
hostname = "0.4"
thiserror = "1.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.15"
