[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
authors = ["samduchaine"]

[package.metadata.wix]
upgrade-guid = "4D028697-62FB-4A0C-9620-EF7C1D2D8315"
path-guid = "1E637BA0-8ECA-4006-937A-62D95CC9F22E"
license = false
eula = false

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
which = "6.0"
semver = "1.0"
chrono = { version = "0.4", features = ["serde"] }
indicatif = "0.17"
colored = "2.1"
console = "0.15"
dialoguer = "0.11"

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# File system and process management
walkdir = "2.5"
glob = "0.3"
xshell = "0.2"
duct = "0.13"
cargo_metadata = "0.18"
fs2 = "0.4"

# HTTP client for GitHub API (optional for GitHub release features)
# reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
# octocrab = "0.32"

# Archive creation
tar = "0.4"
flate2 = "1.0"
zip = "2.2"

# Config management
dirs = "5.0"

# Parallel processing
futures = "0.3"
num_cpus = "1.16"

# Pattern matching
regex = "1.11"

# Random number generation (for jitter)
rand = "0.8"

# Additional dependencies
tracing = "0.1"
tempfile = "3.10"

# For package command
sha2 = "0.10"
target-triple = "0.1"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }

[dev-dependencies]
tempfile = "3.10"
